# HotelReservation_MLflow

./: .gitignore  01_data_preprocessing.py  README.md  Taskfile.yml  databricks.yml  main.py  pyproject.toml  requirements.txt
code/: databricks_test.py  one_stop_notebook.py
code/01_data_preprocessing/: encode_and_split_features.py  preprocessing_utils.py
code/02_model_training/: cv_results.csv  feature_importance.csv  train_basic_model.py  training_utils.py
config/: data_description.txt  feature_config.yaml  model_config.yaml  project_config.yaml
notebooks/: one_stop_notebook.ipynb  one_stop_notebook.py  one_stop_script.py
scripts/: 01_load_and_split_data.py  01_load_data.py  02_create_features.py
src/hotel_prediction/: config.py  data_loader.py  data_preprocessor.py  preprocessor.py
