[project]
name = "hotelreservation-mlflow"
version = "0.1.0"
description = "Hotel Reservation Prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "databricks-connect>=15.1.3",
    "ipykernel>=6.29.5",
    "marimo>=0.13.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hotel_prediction"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
