[project]
name = "hotelreservation-mlflow"
version = "0.1.0"
description = "Hotel Reservation Prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.2",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "marimo>=0.13.15",
    "nbformat>=5.10.4",
    "openai>=1.93.0",

]


[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
